fix($stylesheet): Add word-break: break-word to section headings to prevent overlap of Section prima

--- a/src/styles/_base_typography.scss
+++ b/src/styles/_base_typography.scss
@@ -67,6 +67,10 @@ h2 {
   }
 }
 
+.section__headings {
+  word-break: break-word;
+}
+
 .section__heading {
   @include heading;
 }
